Fix alignment for visual container
Fix alignment for visual container

--- a/style/app.scss
+++ b/style/app.scss
@@ -67,7 +67,8 @@ body {
       flex-direction: column;
       justify-content: center;
       flex-grow: 1;
-      .intro {
+      .intro,
+      .visual {
         align-self: center;
       }
     }
